logs/Slang/generated/hdlconv/hdlconvertor_p295.sv.log
name: hdlconvertor_p295
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:3:3: error: language feature not yet supported
  let x = a || b;
  ^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:3:9: error: expected expression
  let x = a || b;
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:3:17: error: expected '='
  let x = a || b;
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:4:3: error: language feature not yet supported
  sequence s;
  ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:12:3: error: language feature not yet supported
  sequence s;
  ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:25:7: error: language feature not yet supported
      let my_let(x) = !x || b && c[i];
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:25:21: error: expected expression
      let my_let(x) = !x || b && c[i];
                    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:25:38: error: expected '='
      let my_let(x) = !x || b && c[i];
                                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:26:25: error: use of undeclared identifier 'my_let'
      assign d[2 - i] = my_let(a); // OK
                        ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:36:3: error: language feature not yet supported
  let ones_match(bits x, y) = x == y;
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:36:29: error: expected expression
  let ones_match(bits x, y) = x == y;
                            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:36:37: error: expected '='
  let ones_match(bits x, y) = x == y;
                                    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:37:3: error: language feature not yet supported
  let same(logic x, y) = x === y;
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:37:24: error: expected expression
  let same(logic x, y) = x === y;
                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:37:33: error: expected '='
  let same(logic x, y) = x === y;
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:39:16: error: use of undeclared identifier 'ones_match'
    a1: assert(ones_match(a, b));
               ^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:41:3: error: language feature not yet supported
  property toggles(bit x, y);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p295.sv:44:3: error: language feature not yet supported
  a2: assert property (@(posedge clock) toggles(c, d));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
